# Vulkanic

./: .gitignore  CMakeLists.txt  README.md
include/: tinyvk.h
src/: Vulkanic.cpp  stb_image.h
src/Engine/: Helper.hpp  Mesh.cpp  Mesh.h  Template.h  VE3dmodel.cpp  VE3dmodel.h  VECamera.cpp  VECamera.h  VEGame.cpp  VEGame.h  VEGameObject.cpp  VEGameObject.h  VEInput.cpp  VEInput.h  VEScene.cpp  VEScene.h  VESceneManager.cpp  VESceneManager.h  VEShaderManager.cpp  VEShaderManager.h  VETexturedPlane.cpp  VETexturedPlane.h  VEngine.hpp
src/Engine/Example/: example.cpp  example.h
src/Engine/utils/: ltalloc.cpp
